Pascal/test/cohadar/pascal/errors/undefined_constant.pas
program test;
const
	x = 2 + y;
begin
end.